--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -23,8 +23,6 @@
     MouseLeftButtonDown="Grid_MouseLeftButtonDown_1"
     >
 
-
-
     <Grid
         x:Name="FocusGrid"
         hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}">
@@ -45,33 +43,7 @@
             </Grid.ColumnDefinitions>
         </Grid>
 
-        <Grid
-            Margin="0,0,25,18"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom">
-
-            <StackPanel Orientation="Horizontal">
-
-
-                <TextBlock
-                    Margin="5"
-                    VerticalAlignment="Center"
-                    FlowDirection="LeftToRight"
-                    FontSize="14"
-                    Foreground="{StaticResource WolvenKitRed}"
-                    IsEnabled="False"
-                    Text="{Binding VersionNumber}" />
-                <iconPacks:PackIconCodicons
-                    Width="20"
-                    Height="20"
-                    VerticalAlignment="Center"
-                    Foreground="{StaticResource WolvenKitRed}"
-                    Kind="Versions" />
-            </StackPanel>
-
-        </Grid>
-
-        <TabControl x:Name="HomeTabs" TabStripPlacement="Left" Margin="0">
+        <TabControl Grid.Row="0" x:Name="HomeTabs" TabStripPlacement="Left" Margin="0">
             <TabControl.Resources>
                 <Style TargetType="{x:Type TabItem}">
                     <Setter Property="Background" Value="Transparent"/>
@@ -85,20 +57,20 @@
                                         <ColumnDefinition Width="11*" />
                                     </Grid.ColumnDefinitions>
                                     <Border Grid.Column="1"
-                                    x:Name="Border"
-                                    Margin="30,0,0,0"
-                                    Background="{TemplateBinding Background}"
-                                    BorderThickness="3,0,0,0"
-                                    BorderBrush="{TemplateBinding BorderBrush}">
-                                    <ContentPresenter
-                                        x:Name="ContentSite"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Left"
-                                        ContentSource="Header"
-                                        Width="160"
-                                        Height="44"
-                                        Margin="8,0,0,0"
-                                        RecognizesAccessKey="True" />
+                                        x:Name="Border"
+                                        Margin="30,0,0,0"
+                                        Background="{TemplateBinding Background}"
+                                        BorderThickness="3,0,0,0"
+                                        BorderBrush="{TemplateBinding BorderBrush}">
+                                        <ContentPresenter
+                                            x:Name="ContentSite"
+                                            VerticalAlignment="Center"
+                                            HorizontalAlignment="Left"
+                                            ContentSource="Header"
+                                            Width="160"
+                                            Height="44"
+                                            Margin="8,0,0,0"
+                                            RecognizesAccessKey="True" />
                                     </Border>
                                 </Grid>
                             </ControlTemplate>
@@ -150,46 +122,46 @@
                                                 <RowDefinition Height="1*" />
                                             </Grid.RowDefinitions>
                                             <Image
-                                                Grid.Column="1"
-                                                Grid.Row="1"
-                                                x:Name="LogoNavi"
-                                                HorizontalAlignment="Stretch"
-                                                VerticalAlignment="Stretch"
-                                                Source="pack://application:,,,/Resources/Media/Images/Application/Sammy_Home.png" />
+                                                    Grid.Column="1"
+                                                    Grid.Row="1"
+                                                    x:Name="LogoNavi"
+                                                    HorizontalAlignment="Stretch"
+                                                    VerticalAlignment="Stretch"
+                                                    Source="pack://application:,,,/Resources/Media/Images/Application/Sammy_Home.png" />
                                             <Button
-                                                IsCancel="True"
-                                                Grid.Column="1"
-                                                Grid.Row="1"
-                                                HorizontalAlignment="Stretch"
-                                                VerticalAlignment="Stretch"
-                                                Width="Auto"
-                                                Height="Auto"
-                                                Style="{DynamicResource HeaderButtonStyle}"
-                                                Opacity=".15"
-                                                Background="{DynamicResource TransparentWhiteBrush}"
-                                                BorderBrush="{DynamicResource TransparentWhiteBrush}"
-                                                Foreground="{DynamicResource TransparentWhiteBrush}"
-                                                Command="{Binding CloseHomePage}"/>
+                                                    IsCancel="True"
+                                                    Grid.Column="1"
+                                                    Grid.Row="1"
+                                                    HorizontalAlignment="Stretch"
+                                                    VerticalAlignment="Stretch"
+                                                    Width="Auto"
+                                                    Height="Auto"
+                                                    Style="{DynamicResource HeaderButtonStyle}"
+                                                    Opacity=".15"
+                                                    Background="{DynamicResource TransparentWhiteBrush}"
+                                                    BorderBrush="{DynamicResource TransparentWhiteBrush}"
+                                                    Foreground="{DynamicResource TransparentWhiteBrush}"
+                                                    Command="{Binding CloseHomePage}"/>
                                         </Grid>
                                     </Border>
                                     <Grid
-                                        Grid.Column="0"
-                                        Grid.Row="1">
+                                            Grid.Column="0"
+                                            Grid.Row="1">
                                         <TabPanel
-                                            HorizontalAlignment="Stretch"
-                                            x:Name="HeaderPanel"
-                                            Panel.ZIndex="1"
-                                            IsItemsHost="True"
-                                            Background="Transparent" />
+                                                HorizontalAlignment="Stretch"
+                                                x:Name="HeaderPanel"
+                                                Panel.ZIndex="1"
+                                                IsItemsHost="True"
+                                                Background="Transparent" />
                                     </Grid>
 
                                     <Border
-                                        x:Name="Border"
-                                        Grid.RowSpan="2"
-                                        Grid.Column="1"
-                                        BorderThickness="0">
+                                            x:Name="Border"
+                                            Grid.RowSpan="2"
+                                            Grid.Column="1"
+                                            BorderThickness="0">
                                         <ContentPresenter x:Name="PART_SelectedContentHost"
-                                          Margin="0" ContentSource="SelectedContent" />
+                                              Margin="0" ContentSource="SelectedContent" />
                                     </Border>
                                 </Grid>
                             </ControlTemplate>
@@ -202,11 +174,11 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconCodicons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            Kind="Home" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                Kind="Home" />
                         <TextBlock Text="Welcome" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -215,15 +187,15 @@
                 </TabItem.Content>
             </TabItem>
 
-            <TabItem Name="ModsPageTab">
+            <TabItem Name="ModsPageTab" Selector.Selected="ModsPageTab_Selected">
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconCodicons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            Kind="Package" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                Kind="Package" />
                         <TextBlock Text="Mod Manager" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -232,15 +204,15 @@
                 </TabItem.Content>
             </TabItem>
 
-            <TabItem Name="PluginsPageTab">
+            <TabItem Name="PluginsPageTab" Selector.Selected="PluginsPageTab_Selected">
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconCodicons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            Kind="Extensions" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                Kind="Extensions" />
                         <TextBlock Text="Plugins" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -253,11 +225,11 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconCodicons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            Kind="Settings" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                Kind="Settings" />
                         <TextBlock Text="Settings" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -270,12 +242,12 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconBoxIcons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            HorizontalAlignment="Center"
-                            Kind="LogosWikipedia" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                HorizontalAlignment="Center"
+                                Kind="LogosWikipedia" />
                         <TextBlock Text="Wiki" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -288,12 +260,12 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconBoxIcons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            HorizontalAlignment="Center"
-                            Kind="LogosGithub" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                HorizontalAlignment="Center"
+                                Kind="LogosGithub" />
                         <TextBlock Text="Github" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -306,12 +278,12 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <iconPacks:PackIconCodicons
-                            Foreground="White"
-                            VerticalAlignment="Center"
-                            Width="20"
-                            Height="20"
-                            HorizontalAlignment="Center"
-                            Kind="Cloud" />
+                                Foreground="White"
+                                VerticalAlignment="Center"
+                                Width="20"
+                                Height="20"
+                                HorizontalAlignment="Center"
+                                Kind="Cloud" />
                         <TextBlock Text="Website" Margin="8,0,0,0" VerticalAlignment="Center" FontSize="16"/>
                     </StackPanel>
                 </TabItem.Header>
@@ -320,6 +292,55 @@
                 </TabItem.Content>
             </TabItem>
         </TabControl>
+
+        <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="0,0,25,18">
+            <Button Grid.Row="1" x:Name="ToEditorButton" HorizontalAlignment="Stretch" BorderThickness="0" >
+                <Grid>
+                    <StackPanel >
+                        <TextBlock
+                            Margin="0,0,50,0"
+                            Width="250"
+                            HorizontalAlignment="Center"
+                            FontSize="20"
+                            Text="Continue to editor" />
+                    </StackPanel>
+                    <iconPacks:PackIconCodicons
+                                        Margin="0,0,0,0"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        Height="36"
+                                        Width="36"
+                                        Kind="ArrowRight" />
+                </Grid>
+            </Button>
+
+        </Grid>
+
+        <Grid
+            Margin="0,0,25,18"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom">
+
+            <StackPanel Orientation="Horizontal">
+
+
+                <TextBlock
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    FlowDirection="LeftToRight"
+                    FontSize="14"
+                    Foreground="{StaticResource WolvenKitRed}"
+                    IsEnabled="False"
+                    Text="{Binding VersionNumber}" />
+                <iconPacks:PackIconCodicons
+                    Width="20"
+                    Height="20"
+                    VerticalAlignment="Center"
+                    Foreground="{StaticResource WolvenKitRed}"
+                    Kind="Versions" />
+            </StackPanel>
+
+        </Grid>
 
         <feather:GuidedTour
             Name="guide"
